--- a/src/home.html
+++ b/src/home.html
@@ -7,12 +7,42 @@
   <meta name="description" content="Tour & Travels Agency is a leading travel agency offering a wide range of tour packages and travel services for your perfect vacation.">
   <meta name="author" content="Pouch Care Team z4Code">
   <meta name="keywords" content="Tour, Travels, agency, business, corporate, tour packages, journey, trip, vacation, holiday, travel agency">
+  <!-- Favicon -->
+  <link rel="icon" href="../img/favicon.png" type="image/x-icon" alt="Pouch Care Favicon">
+  <!-- Title -->
   <title>Pouch Care - Tour & Travels Agency </title>
+  <!-- Tailwind CSS -->
   <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline bg-amber-500 p-10">
-    Hello world!
-  </h1>
+<!-- Header Start -->
+<header>
+    <!-- Mobile Header Start -->
+    <div class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
+        <div class="container mx-auto flex justify-between items-center p-4">
+            <a href="#" class="text-xl font-bold text-gray-800">Pouch Care</a>
+            <nav class="hidden md:flex space-x-4">
+                <a href="#" class="text-gray-600 hover:text-blue-500">Home</a>
+                <a href="#" class="text-gray-600 hover:text-blue-500">About Us</a>
+                <a href="#" class="text-gray-600 hover:text-blue-500">Services</a>
+                <a href="#" class="text-gray-600 hover:text-blue-500">Contact</a>
+            </nav>
+            <button class="md:hidden text-gray-600 focus:outline-none">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16m-7 6h7" />
+                </svg>
+                <!-- close icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="hidden w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+            </button>
+        </div>
+    </div>
+    <!-- Mobile Header End -->
+
+    <!-- Desktop Header Start -->
+    <!-- Desktop Header End -->
+</header>
+<!-- Header End -->
 </body>
 </html>
