--- a/src/home.html
+++ b/src/home.html
@@ -8,41 +8,98 @@
   <meta name="author" content="Pouch Care Team z4Code">
   <meta name="keywords" content="Tour, Travels, agency, business, corporate, tour packages, journey, trip, vacation, holiday, travel agency">
   <!-- Favicon -->
-  <link rel="icon" href="../img/favicon.png" type="image/x-icon" alt="Pouch Care Favicon">
+  <link rel="icon" href="../assets/img/favicon.png" type="image/x-icon" alt="Pouch Care Favicon">
   <!-- Title -->
   <title>Pouch Care - Tour & Travels Agency </title>
   <!-- Tailwind CSS -->
   <link href="./output.css" rel="stylesheet">
+
+  <!-- Some CSS Libs -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+
 </head>
 <body>
-<!-- Header Start -->
-<header>
-    <!-- Mobile Header Start -->
-    <div class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
-        <div class="container mx-auto flex justify-between items-center p-4">
-            <a href="#" class="text-xl font-bold text-gray-800">Pouch Care</a>
-            <nav class="hidden md:flex space-x-4">
-                <a href="#" class="text-gray-600 hover:text-blue-500">Home</a>
-                <a href="#" class="text-gray-600 hover:text-blue-500">About Us</a>
-                <a href="#" class="text-gray-600 hover:text-blue-500">Services</a>
-                <a href="#" class="text-gray-600 hover:text-blue-500">Contact</a>
-            </nav>
-            <button class="md:hidden text-gray-600 focus:outline-none">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16m-7 6h7" />
-                </svg>
-                <!-- close icon -->
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="hidden w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-                </svg>
-            </button>
+<!-- Tagline Start -->
+<div class="hidden bg-slate-900 md:block">
+    <div class="container mx-auto">
+        <div class="text-white flex justify-between items-center py-3">
+            <ul class="flex items-center space-x-6">
+                <li class="flex items-center">
+                    <i data-feather="clock" class="text-red-500 size-4"></i>
+                    <span class="ms-2 text-slate-300">Sun-Thu: 9:00am to 6:00pm</span>
+                </li>
+                <li class="flex items-center">
+                    <i data-feather="map-pin" class="text-red-500 size-4"></i>
+                    <span class="ms-2 text-slate-300">Belly Road, Fulpur 143</span>
+                </li>
+            </ul>
+            <ul class="flex items-center space-x-6">
+                <li class="flex items-center">
+                    <i data-feather="mail" class="text-red-500 size-4"></i>
+                    <span class="ms-2 text-slate-300">
+                        <a href="mailto:pouchcaretravel@gmail.com" class="text-slate-300 hover:text-slate-200">pouchcare@travel.com</a>
+                    </span>
+                </li>
+                <li>
+                    <ul class="flex items-center space-x-2">
+                        <li class="inline-flex mb-0">
+                            <a href="#!" class="text-slate-300 hover:text-red-500">
+                                <i data-feather="facebook" class="size-4 align-middle" title="facebook"></i>
+                            </a>
+                        </li>
+                        <li class="inline-flex ms-2 mb-0">
+                            <a href="#!" class="text-slate-300 hover:text-red-500">
+                                <i data-feather="instagram" class="size-4 align-middle" title="instagram"></i>
+                            </a>
+                        </li>
+                        <li class="inline-flex ms-2 mb-0">
+                            <a href="#!" class="text-slate-300 hover:text-red-500">
+                                <i data-feather="twitter" class="size-4 align-middle" title="twitter"></i>
+                            </a>
+                        </li>
+                        <li class="inline-flex ms-2 mb-0">
+                            <a href="tel:+152534-468-854" class="text-slate-300 hover:text-red-500">
+                                <i data-feather="phone" class="size-4 align-middle" title="phone"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </div>
-    <!-- Mobile Header End -->
+</div>
+<!-- Tagline End -->
 
-    <!-- Desktop Header Start -->
-    <!-- Desktop Header End -->
-</header>
-<!-- Header End -->
+
+
+
+
+https://shreethemes.in/travosy/layouts/index.html
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Js links -->
+<script src="https://unpkg.com/feather-icons"></script>
+
+<script>
+    feather.replace()
+  </script>
+
 </body>
 </html>
