img name change

--- a/src/home.html
+++ b/src/home.html
@@ -83,19 +83,19 @@
                 <!-- desktop Menu Start -->
                 <ul class="hidden lg:flex items-center space-x-6">
                     <li>
-                        <a href="./home.html">Home</a>
+                        <a href="./home.html" class="active font-bold text-black/50 hover:text-red-500 transition-all duration-300">Home</a>
                     </li>
                     <li>
-                        <a href="./home.html">Our Packages</a>
+                        <a href="./home.html" class="font-bold text-black/50 hover:text-red-500 transition-all duration-300">Our Packages</a>
                     </li>
                     <li>
-                        <a href="./home.html">About Us</a>
+                        <a href="./home.html" class="font-bold text-black/50 hover:text-red-500 transition-all duration-300">About Us</a>
                     </li>
                     <li>
-                        <a href="./home.html">Blog</a>
+                        <a href="./home.html" class="font-bold text-black/50 hover:text-red-500 transition-all duration-300">Blog</a>
                     </li>
                     <li>
-                        <a href="./home.html">Contact Us</a>
+                        <a href="./home.html" class="font-bold text-black/50 hover:text-red-500 transition-all duration-300">Contact Us</a>
                     </li>
                 </ul>
                 <!-- desktop Menu End -->
@@ -155,11 +155,21 @@
         </div>
     </div>
 </nav>
-
-
-
 <!-- Navbar End -->
 
+<!-- Hero Section Start -->
+<section class="relative md:pt-72 md:pb-60 py-36 table w-full items-center bg-[url('')] bg-top bg-no-repeat bg-cover">
+    <div class="absolute inset-0 bg-black/50"></div>
+    <div class="container mx-auto px-3 md:px-6 lg:px-8 relative z-10">
+        <div class="text-center text-white">
+            <h1 class="text-4xl md:text-5xl font-bold mb-4">Explore the World with Us</h1>
+            <p class="text-lg md:text-xl mb-6">Your dream vacation is just a click away. Discover our exclusive tour packages and travel services.</p>
+            <a href="./packages.html" class="inline-block bg-red-500 hover:bg-red-600 text-white font-semibold py-3 px-6 rounded-md transition duration-300">View Packages</a>
+        </div>
+    </div>
+    
+</section>
+<!-- Hero Section End -->
 
 
 
