--- a/src/home.html
+++ b/src/home.html
@@ -71,11 +71,11 @@
 </div>
 <!-- Tagline End -->
 <!-- Navbar Start -->
- <nav class="bg-white">
+ <nav class="relative z-50">
     <div class="container mx-auto flex justify-between items-center px-3 md:px-6 lg:px-8">
         <!-- logo -->
         <a href="./home.html" class="flex items-center py-4">
-            <img src="../assets/img/logo2.webp" alt="Pouch Care Logo" class="h-14 lg:h-16">
+            <img src="../assets/img/logo.webp" alt="Pouch Care Logo" class="h-14 lg:h-16">
         </a>
 
         <div class="flex items-center gap-2">
@@ -83,19 +83,19 @@
                 <!-- desktop Menu Start -->
                 <ul class="hidden lg:flex items-center space-x-6">
                     <li>
-                        <a href="./home.html" class="active font-bold text-black/50 hover:text-red-500 transition-all duration-300">Home</a>
+                        <a href="./home.html" class="active font-bold text-white/50 hover:text-red-500 transition-all duration-300">Home</a>
                     </li>
                     <li>
-                        <a href="./home.html" class="font-bold text-black/50 hover:text-red-500 transition-all duration-300">Our Packages</a>
+                        <a href="./home.html" class="font-bold text-white/50 hover:text-red-500 transition-all duration-300">Our Packages</a>
                     </li>
                     <li>
-                        <a href="./home.html" class="font-bold text-black/50 hover:text-red-500 transition-all duration-300">About Us</a>
+                        <a href="./home.html" class="font-bold text-white/50 hover:text-red-500 transition-all duration-300">About Us</a>
                     </li>
                     <li>
-                        <a href="./home.html" class="font-bold text-black/50 hover:text-red-500 transition-all duration-300">Blog</a>
+                        <a href="./home.html" class="font-bold text-white/50 hover:text-red-500 transition-all duration-300">Blog</a>
                     </li>
                     <li>
-                        <a href="./home.html" class="font-bold text-black/50 hover:text-red-500 transition-all duration-300">Contact Us</a>
+                        <a href="./home.html" class="font-bold text-white/50 hover:text-red-500 transition-all duration-300">Contact Us</a>
                     </li>
                 </ul>
                 <!-- desktop Menu End -->
@@ -104,8 +104,8 @@
                 <ul class="buy-button list-none mb-0">
                     <li class="dropdown inline-block relative pe-1">
                         <button data-dropdown-toggle="dropdown" class="dropdown-toggle align-middle inline-flex search-dropdown" type="button">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search size-5 dark-icon"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search size-5 white-icon text-white"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg> -->
+                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search size-5 dark-icon"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg> -->
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search size-5 white-icon text-white"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                         </button>
                         <!-- Dropdown menu -->
                         <div class="dropdown-menu absolute overflow-hidden end-0 m-0 mt-5 z-10 md:w-52 w-48 rounded-md bg-white dark:bg-slate-900 shadow-sm dark:shadow-gray-800 hidden" onclick="event.stopPropagation();">
@@ -119,7 +119,7 @@
                     <li class="dropdown inline-block relative ps-0.5">
                         <button data-dropdown-toggle="dropdown" class="dropdown-toggle items-center" type="button">
                             <span class="size-8 inline-flex items-center justify-center tracking-wide align-middle duration-500 text-base text-center rounded-md border border-red-500 bg-red-500 text-white">
-                                <img src="../assets/img/16.jpg" class="rounded-md" alt="user profile">
+                                <img src="../assets/img/user.jpg" class="rounded-md" alt="user profile">
                             </span>
                         </button>
                         <!-- Dropdown menu -->
@@ -148,7 +148,9 @@
             <!-- Mobile Menu Start -->
             <div class="lg:hidden">
                 <button class="mobile-menu-button">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><path d="M3 12h18M3 6h18M3 18h18"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu text-white"><path d="M3 12h18M3 6h18M3 18h18"></path></svg>
+
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><path d="M3 12h18M3 6h18M3 18h18"></path></svg> -->
                 </button>
             </div>
             <!-- Mobile Menu End -->
@@ -158,13 +160,23 @@
 <!-- Navbar End -->
 
 <!-- Hero Section Start -->
-<section class="relative md:pt-72 md:pb-60 py-36 table w-full items-center bg-[url('')] bg-top bg-no-repeat bg-cover">
+<section class="relative -mt-24 lg:pt-72 lg:pb-56 xl:pt-76 xl:pb-64 py-42 table w-full items-center bg-[url('../assets/img/herobg.jpg')] bg-top bg-no-repeat bg-cover overflow-hidden">
     <div class="absolute inset-0 bg-black/50"></div>
     <div class="container mx-auto px-3 md:px-6 lg:px-8 relative z-10">
-        <div class="text-center text-white">
-            <h1 class="text-4xl md:text-5xl font-bold mb-4">Explore the World with Us</h1>
-            <p class="text-lg md:text-xl mb-6">Your dream vacation is just a click away. Discover our exclusive tour packages and travel services.</p>
-            <a href="./packages.html" class="inline-block bg-red-500 hover:bg-red-600 text-white font-semibold py-3 px-6 rounded-md transition duration-300">View Packages</a>
+        <div class="grid md:grid-cols-12 grid-cols-1 items-center mt-10 gap-[30px]">
+            <div class="lg:col-span-8 md:col-span-7 md:order-1 order-2">
+                <span class="text-red-500 text-2xl font-semibold capitalize">Beauty is a mirror to the soul.</span>
+                <h1 class="text-white font-bold text-4xl md:text-3xl lg:text-5xl my-4">Let's leave the road, 
+                    <br>And Take The <span class="text-red-500">Pouch Care</span>.
+                </h1>
+                <p class="text-slate-300 font- text-xl">Planning for a trip? We will organize everything for your journey,
+                    <br class="hidden lg:block"> including the best places in the world, all within your budget!</p>
+            </div>
+            <div class="lg:col-span-4 md:col-span-5 md:text-center md:order-2 order-1">
+                <a href="#"  class="lightbox lg:h-24 h-20 lg:w-24 w-20 rounded-full shadow-lg dark:shadow-gray-800 inline-flex items-center justify-center bg-white hover:bg-red-500 text-red-500 hover:text-white duration-500 ease-in-out mx-auto">
+                    <i data-feather="play-circle" class="mdi mdi-play inline-flex items-center justify-center text-3xl"></i>
+                </a>
+            </div>
         </div>
     </div>
     
