mobile menu  after fixed the issus

--- a/src/home.html
+++ b/src/home.html
@@ -71,7 +71,7 @@
 </div>
 <!-- Tagline End -->
 <!-- Navbar Start -->
-<nav id="navbar" class="navbar relative z-50 transition-all duration-300 ease-in-out">
+<nav id="navbar" class="hidden lg:block navbar relative z-50 transition-all duration-300 ease-in-out">
     <div class="container mx-auto flex justify-between items-center px-3 md:px-6 lg:px-8">
         <!-- logo -->
         <a href="./home.html" class="flex items-center py-4">
