--- a/src/home.html
+++ b/src/home.html
@@ -223,6 +223,28 @@
     </div>
 </section>
 <!-- Hero Section End -->
+<!-- Hero Section Start -->
+<section class="relative -mt-24 lg:pt-72 lg:pb-56 xl:pt-76 xl:pb-64 py-42 table w-full items-center bg-[url('../assets/img/herobg.jpg')] bg-top bg-no-repeat bg-cover overflow-hidden">
+    <div class="absolute inset-0 bg-black/50"></div>
+    <div class="container mx-auto px-3 md:px-6 lg:px-8 relative z-10">
+        <div class="grid md:grid-cols-12 grid-cols-1 items-center mt-10 gap-[30px]">
+            <div class="lg:col-span-8 md:col-span-7 md:order-1 order-2">
+                <span class="text-red-500 text-2xl font-semibold capitalize">Beauty is a mirror to the soul.</span>
+                <h1 class="text-white font-bold text-4xl md:text-3xl lg:text-5xl xl:text-6xl my-4">Let's leave the road, 
+                    <br>And Take The <span class="text-red-500">Pouch Care</span>.
+                </h1>
+                <p class="text-slate-300 text-lg">Planning for a trip? We will organize everything for your journey,
+                    <br class="hidden lg:block"> including the best places in the world, all within your budget!</p>
+            </div>
+            <div class="lg:col-span-4 md:col-span-5 md:text-center md:order-2 order-1">
+                <a href="#"  class="lightbox lg:h-24 h-20 lg:w-24 w-20 rounded-full shadow-lg dark:shadow-gray-800 inline-flex items-center justify-center bg-white hover:bg-red-500 text-red-500 hover:text-white duration-500 ease-in-out mx-auto">
+                    <i data-feather="play-circle" class="mdi mdi-play inline-flex items-center justify-center text-3xl"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Hero Section End -->
 
 
 
