--- a/src/home.html
+++ b/src/home.html
@@ -215,9 +215,26 @@
                     <br class="hidden lg:block"> including the best places in the world, all within your budget!</p>
             </div>
             <div class="lg:col-span-4 md:col-span-5 md:text-center md:order-2 order-1">
-                <a href="#"  class="lightbox lg:h-24 h-20 lg:w-24 w-20 rounded-full shadow-lg dark:shadow-gray-800 inline-flex items-center justify-center bg-white hover:bg-red-500 text-red-500 hover:text-white duration-500 ease-in-out mx-auto">
-                    <i data-feather="play-circle" class="mdi mdi-play inline-flex items-center justify-center text-3xl"></i>
-                </a>
+                <!-- Video Popup Modal -->
+<div id="video-modal" class="fixed inset-0 z-[100] px-5 bg-black/80 hidden items-center justify-center">
+  <div class="relative w-full max-w-4xl aspect-video bg-black rounded-md overflow-hidden">
+    <iframe id="youtube-iframe" class="w-full h-full" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <button id="close-video" class="absolute top-2 right-2 text-white text-3xl leading-none">&times;</button>
+  </div>
+</div>
+
+
+<div class="relative inline-flex items-center justify-center mx-auto">
+  <!-- animated ring -->
+  <span class="wave-ring w-20 h-20 lg:w-24 lg:h-24"></span>
+
+  <!-- play button -->
+  <button type="button" id="play-video-btn" class="lightbox relative z-10 lg:h-24 h-20 lg:w-24 w-20 rounded-full shadow-lg inline-flex items-center justify-center bg-white hover:bg-red-500 text-red-500 hover:text-white duration-500 ease-in-out">
+    <i data-feather="play-circle" class="text-3xl"></i>
+  </button>
+</div>
+
+
             </div>
         </div>
     </div>
