--- a/src/home.html
+++ b/src/home.html
@@ -13,10 +13,12 @@
   <title>Pouch Care - Tour & Travels Agency </title>
   <!-- Tailwind CSS -->
   <link href="./output.css" rel="stylesheet">
-
-  <!-- Some CSS Libs -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+  <!-- google fonts -->
+   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+   <!-- CDN links -->
+    <!-- CDN for flatpickr -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <!-- Custom CSS -->
 
 </head>
 <body>
@@ -144,7 +146,7 @@
                                 <li>
                                     <a href="user-setting.html" class="flex items-center font-medium py-2 px-4 hover:text-red-500"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings size-4 me-2"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>Settings</a>
                                 </li>
-                                <li class="border-t border-gray-100 dark:border-gray-800 my-2"></li>
+                                <li class="border-t border-gray-100  my-2"></li>
                                 <li>
                                     <a href="./login.html" class="flex items-center font-medium py-2 px-4 hover:text-red-500"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-out size-4 me-2"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>Logout</a>
                                 </li>
@@ -202,66 +204,118 @@
 <!-- Navbar End -->
 
 <!-- Hero Section Start -->
-<section class="relative -mt-24 lg:pt-72 lg:pb-56 xl:pt-76 xl:pb-64 py-42 table w-full items-center bg-[url('../assets/img/herobg.jpg')] bg-top bg-no-repeat bg-cover overflow-hidden">
+<section class="relative -mt-24 py-42 table w-full items-center bg-[url('../assets/img/herobg.jpg')] bg-top bg-no-repeat bg-cover overflow-hidden lg:pt-56 lg:pb-56 xl:pb-64">
     <div class="absolute inset-0 bg-black/50"></div>
     <div class="container mx-auto px-3 md:px-6 lg:px-8 relative z-10">
         <div class="grid md:grid-cols-12 grid-cols-1 items-center mt-10 gap-[30px]">
-            <div class="lg:col-span-8 md:col-span-7 md:order-1 order-2">
-                <span class="text-red-500 text-2xl font-semibold capitalize">Beauty is a mirror to the soul.</span>
-                <h1 class="text-white font-bold text-4xl md:text-3xl lg:text-5xl xl:text-6xl my-4">Let's leave the road, 
+            <div class="md:col-span-8 md:order-1 xl:col-span-7 order-2 mt-10 md:mt-0">
+                <span class="text-red-500 text-2xl font-semibold capitalize" style="font-family: 'Dancing Script', cursive;">Beauty is a mirror to the soul.</span>
+                <h1 class="text-white font-bold my-5 text-4xl md:text-[48px] lg:text-[64px] xl:text-[72px] 2xl:text-[84px] xl:leading-[1]">Let's leave the road, 
                     <br>And Take The <span class="text-red-500">Pouch Care</span>.
                 </h1>
                 <p class="text-slate-300 text-lg">Planning for a trip? We will organize everything for your journey,
                     <br class="hidden lg:block"> including the best places in the world, all within your budget!</p>
             </div>
-            <div class="lg:col-span-4 md:col-span-5 md:text-center md:order-2 order-1">
+            <div class="md:col-span-4 md:text-center md:order-2 order-1 xl:col-span-5">
                 <!-- Video Popup Modal -->
-<div id="video-modal" class="fixed inset-0 z-[100] px-5 bg-black/80 hidden items-center justify-center">
-  <div class="relative w-full max-w-4xl aspect-video bg-black rounded-md overflow-hidden">
-    <iframe id="youtube-iframe" class="w-full h-full" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    <button id="close-video" class="absolute top-2 right-2 text-white text-3xl leading-none">&times;</button>
-  </div>
-</div>
+                <div id="video-modal" class="fixed inset-0 z-[100] px-5 bg-black/80 hidden items-center justify-center">
+                    <div class="relative w-full max-w-4xl aspect-video bg-black rounded-md overflow-hidden">
+                        <iframe id="youtube-iframe" class="w-full h-full" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        <button id="close-video" class="absolute top-2 right-2 text-white text-3xl leading-none">&times;</button>
+                    </div>
+                </div>
 
+                <div class="relative inline-flex items-center justify-center mx-auto">
+                    <!-- animated ring -->
+                    <span class="wave-ring w-20 h-20 lg:w-24 lg:h-24"></span>
+                    <span class="wave-ring w-20 h-20 lg:w-24 lg:h-24"></span>
+                    <span class="wave-ring w-20 h-20 lg:w-24 lg:h-24"></span>
+                    <span class="wave-ring w-20 h-20 lg:w-24 lg:h-24"></span>
+                    <span class="wave-ring w-20 h-20 lg:w-24 lg:h-24"></span>
 
-<div class="relative inline-flex items-center justify-center mx-auto">
-  <!-- animated ring -->
-  <span class="wave-ring w-20 h-20 lg:w-24 lg:h-24"></span>
-
-  <!-- play button -->
-  <button type="button" id="play-video-btn" class="lightbox relative z-10 lg:h-24 h-20 lg:w-24 w-20 rounded-full shadow-lg inline-flex items-center justify-center bg-white hover:bg-red-500 text-red-500 hover:text-white duration-500 ease-in-out">
-    <i data-feather="play-circle" class="text-3xl"></i>
-  </button>
-</div>
-
-
+                    <!-- play button -->
+                    <button type="button" id="play-video-btn" class="lightbox relative z-10 lg:h-24 h-20 lg:w-24 w-20 rounded-full shadow-lg inline-flex items-center justify-center bg-white hover:bg-red-500 text-red-500 hover:text-white duration-500 ease-in-out">
+                        <i data-feather="play-circle" class="text-3xl"></i>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
 </section>
 <!-- Hero Section End -->
-<!-- Hero Section Start -->
-<section class="relative -mt-24 lg:pt-72 lg:pb-56 xl:pt-76 xl:pb-64 py-42 table w-full items-center bg-[url('../assets/img/herobg.jpg')] bg-top bg-no-repeat bg-cover overflow-hidden">
-    <div class="absolute inset-0 bg-black/50"></div>
-    <div class="container mx-auto px-3 md:px-6 lg:px-8 relative z-10">
-        <div class="grid md:grid-cols-12 grid-cols-1 items-center mt-10 gap-[30px]">
-            <div class="lg:col-span-8 md:col-span-7 md:order-1 order-2">
-                <span class="text-red-500 text-2xl font-semibold capitalize">Beauty is a mirror to the soul.</span>
-                <h1 class="text-white font-bold text-4xl md:text-3xl lg:text-5xl xl:text-6xl my-4">Let's leave the road, 
-                    <br>And Take The <span class="text-red-500">Pouch Care</span>.
-                </h1>
-                <p class="text-slate-300 text-lg">Planning for a trip? We will organize everything for your journey,
-                    <br class="hidden lg:block"> including the best places in the world, all within your budget!</p>
-            </div>
-            <div class="lg:col-span-4 md:col-span-5 md:text-center md:order-2 order-1">
-                <a href="#"  class="lightbox lg:h-24 h-20 lg:w-24 w-20 rounded-full shadow-lg dark:shadow-gray-800 inline-flex items-center justify-center bg-white hover:bg-red-500 text-red-500 hover:text-white duration-500 ease-in-out mx-auto">
-                    <i data-feather="play-circle" class="mdi mdi-play inline-flex items-center justify-center text-3xl"></i>
-                </a>
-            </div>
+
+<!-- Search Box Start -->
+<div class="bg-slate-950">
+    <!-- Form Section -->
+    <div class="container mx-auto px-3 md:px-6 lg:px-8 relative z-10 -mt-16">
+        <div class="grid grid-cols-1">
+            <form class="p-6 bg-white  rounded-xl shadow-sm">
+                <div class="registration-form text-slate-900 text-start">
+                    <div class="grid lg:grid-cols-5 md:grid-cols-2 grid-cols-1 gap-4">
+
+                        <!-- Search -->
+                        <div>
+                            <label class="form-label font-medium text-slate-900 ">Search:</label>
+                            <div class="relative mt-2">
+                                <svg class="size-[18px] absolute top-[10px] start-3 text-slate-400" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                                </svg>
+                                <input name="name" type="text" class="w-full py-2 px-3 ps-10 h-10 bg-transparent rounded-md outline-none border border-gray-100  focus:ring-0" placeholder="Search">
+                            </div>
+                        </div>
+
+                        <!-- Date Picker -->
+                        <div>
+                            <label class="form-label font-medium text-slate-900 ">Select Your Date:</label>
+                            <div class="relative mt-2">
+                                <svg class="size-[18px] absolute top-[10px] start-3 text-slate-400" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line>
+                                </svg>
+                                <input type="text" id="dateInput" class="w-full py-2 px-3 ps-10 h-10 bg-transparent rounded-md outline-none border border-gray-100  focus:ring-0 datepicker" placeholder="Select Your Date">
+                            </div>
+                        </div>
+
+                        <!-- Another Date -->
+                        <div>
+                            <label class="form-label font-medium text-slate-900 ">Select Your Date:</label>
+                            <div class="relative mt-2">
+                            <svg class="size-[18px] absolute top-[10px] start-3 text-slate-400" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                                <line x1="16" y1="2" x2="16" y2="6"></line>
+                                <line x1="8" y1="2" x2="8" y2="6"></line>
+                                <line x1="3" y1="10" x2="21" y2="10"></line>
+                            </svg>
+                                <input type="text" id="dateInput" class="w-full py-2 px-3 ps-10 h-10 bg-transparent rounded-md outline-none border border-gray-100  focus:ring-0 datepicker" placeholder="Select Your Date">
+                            </div>
+                        </div>
+
+                        <!-- Person Selector -->
+                        <div>
+                            <label class="form-label font-medium text-slate-900 ">No. of person:</label>
+                            <div class="relative mt-2">
+                                <svg class="size-[18px] absolute top-[10px] start-3 text-slate-400" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                                </svg>
+                                <select class="form-select w-full py-2 px-3 ps-10 h-10 bg-transparent rounded-md outline-none border border-gray-100  focus:ring-0">
+                                    <option disabled selected>No. of person</option>
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                    <option>5</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <!-- Submit -->
+                        <div class="lg:mt-[35px]">
+                            <input type="submit" value="Search" class="py-1 px-5 h-10 inline-block tracking-wide align-middle duration-500 text-base text-center bg-red-500 text-white rounded-md w-full cursor-pointer">
+                        </div>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
-</section>
-<!-- Hero Section End -->
+</div>
+
+<!-- Search Box End -->
 
 
 
@@ -288,15 +342,12 @@
 <!-- Js links -->
 <script src="./app.js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
+<!-- CDN JS -->
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
 <script>
     feather.replace()
 </script>
-
-
-
-
-
 
 
 
