--- a/src/home.html
+++ b/src/home.html
@@ -245,7 +245,7 @@
 <!-- Hero Section End -->
 
 <!-- Search Box Start -->
-<div class="bg-slate-950">
+<section class="bg-slate-950">
     <!-- Form Section -->
     <div class="container mx-auto px-3 md:px-6 lg:px-8 relative z-10 -mt-16">
         <div class="grid grid-cols-1">
@@ -313,9 +313,11 @@
             </form>
         </div>
     </div>
-</div>
-
+</section>
 <!-- Search Box End -->
+
+<!-- Destinations Section Start -->
+<!-- Destinations Section End -->
 
 
 
