sticky menu problem

--- a/src/home.html
+++ b/src/home.html
@@ -164,7 +164,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="menu-icon" class="feather feather-menu text-white hover:text-red-500 transition-all duration-300"><path d="M3 12h18M3 6h18M3 18h18"></path></svg>
                 </button>
 
-                <div class="dropdown-menu absolute end-0 m-0 mt-7 z-10 w-full py-2 overflow-hidden bg-white/95 hidden border-t border-red-600" onclick="event.stopPropagation();">
+                <div class="dropdown-menu absolute end-0 m-0 mt-7 z-10 w-full py-2 overflow-hidden bg-white/95 backdrop-blur hidden border-t border-red-600" onclick="event.stopPropagation();">
                             
                     <ul class="py-2 text-start flex flex-col gap-4 ">
                         <li class="ml-5">
@@ -317,6 +317,7 @@
 <!-- Search Box End -->
 
 <!-- Destinations Section Start -->
+<div class="h-screen bg-amber-500"></div>
 <!-- Destinations Section End -->
 
 
